--- a/example1/index.html
+++ b/example1/index.html
@@ -2,18 +2,18 @@
 <html>
 	<head>
 		<meta charset='utf-8'/>
-		<title>ColorBox Examples</title>
+		<title>Colorbox Examples</title>
 		<style>
 			body{font:12px/1.2 Verdana, sans-serif; padding:0 10px;}
 			a:link, a:visited{text-decoration:none; color:#416CE5; border-bottom:1px solid #416CE5;}
 			h2{font-size:13px; margin:15px 0 0 0;}
 		</style>
 		<link rel="stylesheet" href="colorbox.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="../jquery.colorbox.js"></script>
 		<script>
 			$(document).ready(function(){
-				//Examples of how to assign the ColorBox event to elements
+				//Examples of how to assign the Colorbox event to elements
 				$(".group1").colorbox({rel:'group1'});
 				$(".group2").colorbox({rel:'group2', transition:"fade"});
 				$(".group3").colorbox({rel:'group3', transition:"none", width:"75%", height:"75%"});
@@ -43,7 +43,7 @@
 		</script>
 	</head>
 	<body>
-		<h1>ColorBox Demonstration</h1>
+		<h1>Colorbox Demonstration</h1>
 		<h2>Elastic Transition</h2>
 		<p><a class="group1" href="../content/ohoopee1.jpg" title="Me and my grandfather on the Ohoopee.">Grouped Photo 1</a></p>
 		<p><a class="group1" href="../content/ohoopee2.jpg" title="On the Ohoopee as a child">Grouped Photo 2</a></p>
@@ -86,7 +86,7 @@
 			<p>The inline option preserves bound JavaScript events and changes, and it puts the content back where it came from when it is closed.</p>
 			<p><a id="click" href="#" style='padding:5px; background:#ccc;'>Click me, it will be preserved!</a></p>
 			
-			<p><strong>If you try to open a new ColorBox while it is already open, it will update itself with the new content.</strong></p>
+			<p><strong>If you try to open a new Colorbox while it is already open, it will update itself with the new content.</strong></p>
 			<p>Updating Content Example:<br />
 			<a class="ajax" href="../content/ajax.html">Click here to load new content</a></p>
 			</div>
